SERVER-70394 Fix self-swap in MultiPlanStage::removeRejectedPlans